Bug 138999 - Scrolling issue with font list view
Summary: Scrolling issue with font list view
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.3.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2020-12-17 15:18 UTC by Lucas A. Wilm
Modified: 2021-12-10 11:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the bug (1.08 MB, video/mp4)
2020-12-17 15:19 UTC, Lucas A. Wilm
Details
Video showing the bug (2.85 MB, video/mp4)
2021-03-10 08:45 UTC, Lucas A. Wilm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas A. Wilm 2020-12-17 15:18:15 UTC
Description:
When clicking on the font view drop-down menu, it is impossible to use the scroll bar "outside" the menu. This also happens with the font size selection menu.

Steps to Reproduce:
1. Create new document
2. Click on font list view drop-down menu
3. Scroll the list "outside" of the menu

Actual Results:
Impossible to scroll due to strange behavior

Expected Results:
Scrolling behavior should be the same as from scrolling inside the menu


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
It also happens with Impress and Calc
Comment 1 Lucas A. Wilm 2020-12-17 15:19:50 UTC
Created attachment 168257 [details]
Video showing the bug
Comment 2 Lucas A. Wilm 2020-12-17 15:22:25 UTC
I'm current using LibreOffice version from https://launchpad.net/~libreoffice/+archive/ubuntu/ppa but I had the same problem with flatpak version
Comment 3 Srivar Madap 2021-01-09 04:46:27 UTC
Hello Lucas,

I am doing what your steps say and when I scroll outside of the font menu it still is going up so I don't know if that's the result your hoping for but that's what happened to me. So when I scroll outside of the menu it still goes up and down like the expected result you have stated below.
Comment 4 Srivar Madap 2021-01-09 04:47:07 UTC Comment hidden (obsolete)
Comment 5 Lucas A. Wilm 2021-01-09 13:32:05 UTC
(In reply to Srivar Madap from comment #3)
> Hello Lucas,
> 
> I am doing what your steps say and when I scroll outside of the font menu it
> still is going up so I don't know if that's the result your hoping for but
> that's what happened to me. So when I scroll outside of the menu it still
> goes up and down like the expected result you have stated below.

Hello, Srivar.

Thanks for your response. Did you watch the video attached to comment 1 (https://bugs.documentfoundation.org/show_bug.cgi?id=138999#c1) that I posted? In it, you can view the problem I have with the scroll bar. In version 6.4 of LibreOffice I didn't have this problem, so I don't know exactly what is going on. Curious that it occurs both in LibreOffice installed by the package manager of my distribution (Ubuntu 20.10), and by the official PPA and through flatpak.

Another thing that I forgot to mention is that this problem also happens in safe mode and in clean installations. However, when I run LibreOffice from the terminal with the command "SAL_USE_VCLPLUGIN=gen libreoffice", despite the strange appearance, the problem goes away.
Comment 6 Lucas A. Wilm 2021-03-10 08:39:42 UTC
Hello again. I came back to say that the bug persists in version 7.1.1.2 and to give more information about my system. I use Xubuntu 20.10 with Xfce 4.16, libgtk-3-0 v3.24.23 and NVIDIA v460.39 driver.

More information:

lucas@desktop:~$ inxi -b
System:    Host: desktop Kernel: 5.8.0-44-generic x86_64 bits: 64 Desktop: Xfce 4.16.0 
           Distro: Ubuntu 20.10 (Groovy Gorilla) 
Machine:   Type: Desktop Mobo: PEGATRON model: N/A v: 1.01 serial: <superuser/root required> 
           BIOS: American Megatrends v: 0500 date: 05/11/2010 
CPU:       Info: Triple Core AMD Athlon II X3 400e [MCP] speed: 800 MHz min/max: 800/2200 MHz 
Graphics:  Device-1: NVIDIA GK208B [GeForce GT 710] driver: nvidia v: 460.39 
           Display: x11 server: X.Org 1.20.9 driver: nvidia resolution: 1920x1080 
           OpenGL: renderer: GeForce GT 710/PCIe/SSE2 v: 4.6.0 NVIDIA 460.39 
Network:   Device-1: Qualcomm Atheros AR93xx Wireless Network Adapter driver: ath9k 
           Device-2: Realtek RTL8111/8168/8411 PCI Express Gigabit Ethernet driver: r8169 
Drives:    Local Storage: total: 238.47 GiB used: 206.05 GiB (86.4%) 
Info:      Processes: 184 Uptime: 14m Memory: 7.28 GiB used: 1.27 GiB (17.4%) Shell: Bash 
           inxi: 3.1.07
Comment 7 Lucas A. Wilm 2021-03-10 08:45:27 UTC
Created attachment 170388 [details]
Video showing the bug
Comment 8 Matt K 2021-04-03 00:40:14 UTC
No repro on Windows 64bit using the following version:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5707ec3303f8215af91aac7d7f7cc29bf67b6c99
CPU threads: 12; OS: Windows 10.0 Build 19041; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 9 raal 2021-12-05 13:42:21 UTC
Works OK in Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: ba7db98cca3d8516697c94ef0d6af27db9e1655e
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but I can reproduce in Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: ba7db98cca3d8516697c94ef0d6af27db9e1655e
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 10 Caolán McNamara 2021-12-05 21:03:31 UTC
I can see it under x11, interestingly I cannot under wayland
Comment 11 Caolán McNamara 2021-12-06 10:28:36 UTC
The same effect is seen in the font size drop down too. Maybe we can avoid using a pointer grab at all, it seems to work out ok without noticeable bad side effects here locally anyway with the desirable side effect of get this working.
Comment 12 Commit Notification 2021-12-06 17:15:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4f41fb1cba455db617d7fb68450ea1e38ac9cb0d

tdf#138999 only grab keyboard and not pointing devices

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Caolán McNamara 2021-12-06 17:20:32 UTC
I don't see ill effects (yet) if I do the above. Lets hold onto this for a while and see how naive I am to try that.
Comment 14 Commit Notification 2021-12-10 10:01:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/0db4adad840c591393466256d62e4bee6b2f929d

tdf#138999 only grab keyboard and not pointing devices

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Caolán McNamara 2021-12-10 11:01:49 UTC
I won't backport to 7-2, done in trunk and 7-3