tdf#138999 only grab keyboard and not pointing devices

this way scrolling in a combobox dropdown and moving the mouse outside
the widget doesn't cause the scrollbar to jump to the top. No ill
effect seen in

a) autofilter dropdowns in calc
b) color dropdown in writer main window or sidebar and clicking on
   combobox subwidget to launch its popup and select an entry to
   return to color dropdown
c) submenu popups from style combobox dropdown

Change-Id: I6ad445a6fab899d52907237e1f5506cce31b1f48